*gitlab-ce-8.11.3 (30 Aug 2016)

  30 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.3.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.3 which contains various
  fixes

*gitlab-ce-8.11.2 (29 Aug 2016)

  29 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.2.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.2

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  updated ebuild for gitlab-9999 (git master)

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-ce-8.10.1.ebuild,
  -gitlab-ce-8.10.2.ebuild, -gitlab-ce-8.10.3.ebuild, -gitlab-ce-8.10.4.ebuild,
  -gitlab-ce-8.9.6.ebuild:
  www-apps/gitlab-ce:  purged all versions older than gitlab-ce-8.10.6

*gitlab-ce-8.11.0 (22 Aug 2016)

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/gitlab-ce-8.11.0-fix-redis-config-path.patch, +gitlab-ce-8.11.0.ebuild:
  www-apps/gitlab-ce:  added gitlab-ce-8.11.0. this version contains the new
  issue board!

*gitlab-ce-8.10.6 (18 Aug 2016)

  18 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.6.ebuild
  +files/gitlab-8.10.6-sidekiq.service:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.10.6 and fixed systemd-
  sidekiq service file

  09 Aug 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-8.11.0_rc1.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  updated ebuild with correct commit id for version
  8.11.0_rc1

*gitlab-ce-8.10.4 (05 Aug 2016)

  05 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.4.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.10.4

*gitlab-ce-8.10.3 (02 Aug 2016)

  02 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.3.ebuild:
  www-apps/gitlab-ce:  Added ebuild for version 8.10.3

  02 Aug 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-ce-8.10.0_rc9.ebuild:
  www-apps/gitlab-ce:  removed old RC version

*gitlab-ce-8.10.2 (27 Jul 2016)
