@@ -14,11 +14,13 @@ DIST gitlab-ce-8.11.0.tar.gz 25292875 SHA256 581f228ea5caaa872d180b5864929070b18
 DIST gitlab-ce-8.11.0_rc1.tar.gz 21523791 SHA256 1c3217bb1253359335025e6b5222cd1a8a274d108c02b896553af6b79ad40f9c SHA512 7d82a98f9505c6e9afc275ae6ba52b9a03752baca22f2890ba4ac9507ec331962223257602652657fcabfccef891b50dcb3dbbf30dc57080246f941f33d19dc3 WHIRLPOOL bbde9b27f3cf6b7dab1158927e22ded2f12e2d2568334ef3e140a879ff668d55bb09deed1617e2accbaf4909a68b1983ce56798019f5a0e2ce277c4500d24e76
 DIST gitlab-ce-8.11.2.tar.gz 25627225 SHA256 a807f06cb80ac3becae2f89702988203e2843cdd929f5e21ba073babe6987731 SHA512 7bdbf045c36a65528b960e466ab8b8bcc930aacb1201ce332a0a9329808960d0fede27c6e155a26b0eb64a1ec0c2c75901cdca6051df7f0f31d421e970004f16 WHIRLPOOL 4cad8c23cfbdb3620a758b6e7478bf044a23d9aeb748aae3ff7145e25e2b4d7bfc016d8ad43b029b563e99e5aa24b35dcc8178775f7e3c8b0586c65c321de166
 DIST gitlab-ce-8.11.3.tar.gz 25701850 SHA256 23dc756ae148074701acaefcc686a66ccf703da53dce721f0fc2673f143620eb SHA512 0808da71567799396389164b54954caf326a501199ded766c0cb39905d7aef44df7267e2066b3bd9a586833df7b19dbf4ae4b7f356aa49ad9d8eed065b162d90 WHIRLPOOL 87277ed4793e75814d82ed3bb8076ddb4fe5f47aa68115121c80d6899ab2fad56a39e1ec88e9ac157961a6ef2dc57d076f265816dc58a5b86ab36d15bffc5535
+DIST gitlab-ce-8.11.4.tar.gz 25704666 SHA256 c8d94888b4f7aabaab2d548926935edf0fc284277006e284424e202122b072a3 SHA512 dc4f2dfaabe95ecea1202da8e1af6d850281146faa7ed2c522c34abd0167f9ff4b4807fca76a61fc2f607126efedca552652474edf552f2848d797f92b5b1ef2 WHIRLPOOL 30b2a46e3b3a4503fd1a1cc68eb2709b76067068550729fe45b9a4b3917cfac08932da689743744c03041a7b705432a4f601fb6a1e2d81a897cc035197e90b5f
 EBUILD gitlab-ce-8.10.6.ebuild 11710 SHA256 1659a2e43491488fa6fbbee1699cc4138e8938f694e73310e5faf45fbd9f2578 SHA512 70304f8fe862988d4092dd37c5a66fdfec56c9cb2d62a78f2cdf365a0c629606c6fb9081dbdc7e68530d43894d1cb645d168db8f3f0c8a9999873afd9032ec52 WHIRLPOOL dbf26294a9d6eb4258a67c64844370f1423fa59210b306bc66ea53a902cbc564b1cd084b765759e93d7970df30417e6482dfbbf271dda8d387ef006837123ac3
 EBUILD gitlab-ce-8.11.0.ebuild 11703 SHA256 f95aa4a60c85da0155df6b989e343296eba23a6c2f12055c5f94bee53f5d9bc0 SHA512 6d1c7c3e3139d456a7b22431b326401a9b56e435000a02a572bfdbb52c5495e098b0406ab9b8051a2a901878e3a3a2c4332af9a0bf50ff1a36051f9436c1ddbe WHIRLPOOL bd92de9d5fda4a4b1802e814a55ea1e1a9848a9e085b9ad88ba108771dc68953156c8cecde64ef2250eba8f2b9568f73969460aa61c4901957d9b7771558ed9c
 EBUILD gitlab-ce-8.11.0_rc1.ebuild 11654 SHA256 a73c20f2671fa997bab4b715c7cd2d40f74e1900a96d5805c8a16139fd367736 SHA512 a8af8ffb14f2f190885597f1afa9cd3d2460c47933d45c49f60cffc5f57631b63b04b2a162ed9d520a64146f6d8701699640b9718475d6adbdf61399efd00cfa WHIRLPOOL 7eb709c573f046f519410d7ccfd1e5f2f662e253355243bdc1bf35cc9021f554fd4b0da07beb9826247a70a345d411ef4e6e2f12b3098227da4847d356268495
 EBUILD gitlab-ce-8.11.2.ebuild 11712 SHA256 02dd8184aa55060d9b36fefef46d2506f2516034fdff03837205ca152706f13f SHA512 cb14a84ba0e34f795a06f8947e222fb2fa1ee9a79d3d81bc527498e7ccbbb06ec5e26c56d39e0da30148e918397daaaca4337e732e8791994ed7aaf731cae185 WHIRLPOOL 63309d30e1e41db231f074fadef91fda5fc6d7dc0fa85339b64f4a6522d598c2b67b593f769e4ce70d2343607f6f42eee60614bf0556e2a4848a142c8d326fff
 EBUILD gitlab-ce-8.11.3.ebuild 11712 SHA256 41be23427e3c7d550888eec40091d7e6f6c0cbe477712bb0597362db1490e342 SHA512 fca0648f60a292438746b9ba4ab532957a58889458e45c20ad3d18cf6b46130fe8c4087a813fe2b93ac15f6ab756e67188087c5bf51222b16230bd1fb9431872 WHIRLPOOL b1c09c4f9bc50c584f5e22e2db955d636631ec117054c40c77f68945ed64a048a598f014bc463ad9a5afce3f3317dcafd6bcf9321d2c38a1e36e2fe11506e500
-EBUILD gitlab-ce-9999.ebuild 11644 SHA256 049dcd6ae1eedc7816fc0e1052b868ee3099e902316c751f395d5f1be5139d2d SHA512 f0c664af009419c6ef2f6bca661c5f9656f258ecbcf980d9b02a1920bc1049ac55409b2ff6c451b0eb7129f943b4263efba81b254e42d815f7089af057b01fc5 WHIRLPOOL 7e66b8d3e512709d8ec6ce59d9d87ef3664a12901fc5de478e204e3e7bebd11b3b26c9c996679eeecae10667e9a885e815dcadf49a41baeb0094148cec779f26
-MISC ChangeLog 5720 SHA256 2f9d1518987d86f0f4882900ba3c7b2a88f7c67edcb1e0f44bc1c12427adeb09 SHA512 e8e43b60e60a1599e57cf2b7654256808a82bc99bd7645cf7b8494afba3b362bf41e9c367e3dd12d411dcdc0f8ce27afebe38fe90357e144b2625c35ba073219 WHIRLPOOL 75200224d044fd49958174522e787d5173b39ebcc6e9e026a6a4e77298d2db04e72b7fc87cba0974ab07a478145acc80449893decc2df2863f0a5eb70c1e63c0
+EBUILD gitlab-ce-8.11.4.ebuild 11954 SHA256 1970a09040e9d4e924a187bf108dece607825fe62a2fed7a6202a8c24e878f15 SHA512 189157bd48f107fff5e7b476f4b103c40c81baf2620bd1bf5600547f66c3dfe4ad7aec4001422c4f69a49ba973fdff724d8868d0cbba9719bed4908f3bb60772 WHIRLPOOL 4f270f6251d4172c956492ac3f2d7a2041db4d5ec3b344f43af9f0d01fc8fd3274e225ecbd1d35128757ece050cd91db5db74629c377d553de2afcf015ce9c48
+EBUILD gitlab-ce-9999.ebuild 11893 SHA256 f0bee749c09a41df732e4b0527283faecb7570950ece0efc2fd46aadda3755cb SHA512 1f94b0784cb94e5369dcc5e8be9cd6006788cb92edadb4f9268bb8607c7c36cdd2dcd361b050436620199f28a481d9239a425e208cdbf56c205bacc8242a8544 WHIRLPOOL 10dfaa25eef9c6b6fd37f8c0b4d86e58a4bfd03d2e69579543326b804683dd730973165b88dc20823264dcb059cc37bd57c5d43326eccd0e4c845e1e6369ba3a
+MISC ChangeLog 6022 SHA256 3978e5ef6b91f89eb68b77b9db3e7c491b1652da9b917ab23d146f42ac1293da SHA512 dd3e3780ef749361db266acf13a68c12114859c1ce4f1f313f7891e589ce0e18d7da6d9a982d2bbd4e79e15007aa4c1c8a3b9b1a7f15b4191ebfaa8b0fb686df WHIRLPOOL 73012f2e10478992c9ea43ea56d1c6d3bc8cfbcf9539dffe41f11e595c5104343514954b6b412e4d7486ccc36e96048c6452ac35f38c5fd45820c23575075a9d
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
