@@ -1,3 +1,11 @@
+*gitlab-ce-8.11.4 (02 Sep 2016)
+
+  02 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.4.ebuild,
+  gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  added ebuild for www-apps/gitlab-ce-8.11.4. this version
+  should fix the update migration issue that was introduced with the 8.11.0
+  ebuild.
+
 *gitlab-ce-8.11.3 (30 Aug 2016)
 
   30 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.3.ebuild:
